цветовые настройки страниц

--- a/index.html
+++ b/index.html
@@ -2731,7 +2731,7 @@
                             </div>
                         </div>
                         <div class="development__buttons">
-                            <button class="my-button my-button_noColor my-button_noBorder development__button" data-slide="0">
+                            <button class="my-button my-button_noColor development__button" data-slide="0">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
                                     Алмазная</span>
@@ -2750,7 +2750,7 @@
                                     </svg>
                                 </div> Робототехника
                             </button>
-                            <button class="my-button my-button_noColor my-button_noBorder development__button" data-slide="1">
+                            <button class="my-button my-button_noColor development__button" data-slide="1">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
                                     Алмазная</span>
@@ -2772,7 +2772,7 @@
                                     </svg>
                                 </div> Ритмика
                             </button>
-                            <button class="my-button my-button_noColor my-button_noBorder development__button" data-slide="2">
+                            <button class="my-button my-button_noColor development__button" data-slide="2">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
                                     Алмазная</span>
@@ -2784,7 +2784,7 @@
                                     </svg>
                                 </div> Музыка
                             </button>
-                            <button class="my-button my-button_noColor my-button_noBorder development__button" data-slide="3">
+                            <button class="my-button my-button_noColor development__button" data-slide="3">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
                                     Алмазная</span>
@@ -2799,7 +2799,7 @@
                                     </svg>
                                 </div> Английский
                             </button>
-                            <button class="my-button my-button_noColor my-button_noBorder development__button" data-slide="4">
+                            <button class="my-button my-button_noColor development__button" data-slide="4">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
                                     Алмазная</span>
@@ -2817,7 +2817,7 @@
                                     </svg>
                                 </div> Творчество
                             </button>
-                            <button class="my-button my-button_noColor my-button_noBorder development__button development__button_isIndivid"
+                            <button class="my-button my-button_noColor development__button development__button_isIndivid"
                                 data-slide="5">
                                 <span class="development__slide-popup">2 раза в неделю, в филиалах на ул.
                                     Каландаришвили, ул. Невского, ул. Декабрьских Событий, ул. Березовая, ул.
@@ -3440,6 +3440,7 @@
     <script src="./assets/js/components/button-up.js"></script>
     <script src="./assets/js/components/stories.js"></script>
     <script src="./assets/js/components/modal.js"></script>
+    <script src="./assets/js/components/double-slider.js"></script>
     <script src="./assets/js/components/additional-features.js"></script>
 
 
@@ -3736,85 +3737,6 @@
                     spaceBetween: 24,
                 },
             },
-        });
-    </script>
-
-    <script>
-        const devEnvTextSlider = document.querySelector('.double-slider__text-slider');
-        const devEnvironmenTextSwiper = new Swiper('.double-slider__text-swiper', {
-            direction: 'horizontal',
-            slidesPerView: 1,
-            spaceBetween: 24,
-            pagination: {
-                el: '.double-slider__text-swiper-pagination',
-                type: 'fraction',
-                formatFractionCurrent: number => {
-                    return ('0' + number).slice(-2);
-                },
-                formatFractionTotal: number => {
-                    return ('0' + number).slice(-2);
-                },
-                renderFraction: (currentClass, totalClass) => {
-                    return '<span class="' + currentClass + '"></span>' + '/' + '<span class="' + totalClass + '"></span>';
-                }
-            },
-            navigation: {
-                nextEl: '.double-slider__text-swiper-button-next',
-                prevEl: '.double-slider__text-swiper-button-prev',
-            },
-            on: {
-                slideChange: function () {
-                    updateSwiperHeight();
-                },
-                resize: function () {
-                    updateSwiperHeight();
-                }
-            }
-        });
-
-        function updateSwiperHeight() {
-            const activeSlide = devEnvironmenTextSwiper.slides[devEnvironmenTextSwiper.activeIndex];
-            const slideHeight = activeSlide.firstElementChild.offsetHeight;
-            devEnvTextSlider.style.height = `${slideHeight}px`;
-        }
-
-
-        const sliders = document.querySelectorAll('.double-slider__image-slider');
-        const imageSwipers = [];
-
-        sliders.forEach(slider => {
-            const dataId = slider.getAttribute('data-imageSlider-id');
-            const swiperContainer = slider.querySelector('.double-slider__image-swiper');
-            const paginationContainer = slider.querySelector('.double-slider__image-swiper-pagination');
-
-            const swiper = new Swiper(swiperContainer, {
-                direction: 'horizontal',
-                slidesPerView: 1,
-                spaceBetween: 24,
-                pagination: {
-                    el: paginationContainer,
-                },
-            });
-            imageSwipers.push({ dataId, slider });
-        });
-        console.log(imageSwipers)
-
-        function showImageSlider(activeSlideId) {
-            console.log(activeSlideId)
-            imageSwipers.forEach(imageSwiper => {
-                if (imageSwiper.dataId === activeSlideId) {
-                    imageSwiper.slider.style.display = 'block';
-                } else {
-                    imageSwiper.slider.style.display = 'none';
-                }
-            });
-        }
-
-        showImageSlider(devEnvironmenTextSwiper.slides[devEnvironmenTextSwiper.activeIndex].id);
-
-        devEnvironmenTextSwiper.on('slideChange', function () {
-            const activeSlideId = devEnvironmenTextSwiper.slides[devEnvironmenTextSwiper.activeIndex].id;
-            showImageSlider(activeSlideId);
         });
     </script>
 </body>
