--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                             </div>
                         </div>
                         <div class="hero-section__wrap-img">
-                            <img src="./assets/images/pages/main/hero-section/hero-section-img.png" alt=""
+                            <img src="./assets/images/pages/main/hero-section/hero-section-img.png" alt="картинка девочка"
                                 class="hero-section__img">
                         </div>
                     </div>
